--- a/obraz.html
+++ b/obraz.html
@@ -11,7 +11,7 @@ window.close()
 a)Uwagi na temat JS <br>
 -powstała w 1995 roku <br>
 -jest to język skryptowy, ponieważ nie musi zostać skompilowany do kodu maszynowego, aby można było zobaczyć efekty jego działania <br>
--gdzie jest wykonywany JS (kliet lub serwer) <br>
+-Skrypty można pisać w dwóch formach, na końcu serwera (z tyłu) lub u klienta (koniec serwera). Główna różnica między skryptami po stronie serwera i skryptami po stronie klienta polega na tym, że skrypty po stronie serwera wymagają przetworzenia przez serwer. Z drugiej strony, skrypty po stronie klienta wymagają, aby przeglądarki uruchamiały skrypty na komputerze klienta, ale nie współpracowały z serwerem podczas przetwarzania skryptów po stronie klienta. <br>
 -dlaczego jest to bezpieczne narzędzie <br>
 -jest to tak zwany obiektowy model dokumentu HTML – czyli DOM. Określa on sposoby dostępu oraz zmiany zawartości i parametrów poszczególnych elementów struktury strony. <br>
 <input type="button" name="przycisk" value="Nowa Strona" onclick="WinOpen_musialowska(' ')"> <br>
